Fix the transaction issues